--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
 base="light"
 primaryColor="#ff6200"
-secondaryBackgroundColor="#F0F4F8"
+secondaryBackgroundColor="#f5f5f5"
 textColor="#2b2b2b"
